[gd_scene load_steps=4 format=3 uid="uid://dat2iwiarvvxj"]

[ext_resource type="Script" uid="uid://nelg1hyglwrs" path="res://Scripts/UI/Settings/Audio/master.gd" id="1_m2f7l"]
[ext_resource type="Script" uid="uid://di5m0f88ijcxw" path="res://Scripts/UI/Settings/Audio/music.gd" id="2_7fc3t"]
[ext_resource type="Script" uid="uid://dq12omuvgwn8k" path="res://Scripts/UI/Settings/Audio/sfx.gd" id="3_6doi4"]

[node name="AudioSettings" type="VBoxContainer"]
visible = false
theme_override_constants/separation = 10

[node name="Master" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
script = ExtResource("1_m2f7l")

[node name="MasterLabel" type="Label" parent="Master"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "TOOLTIP_MASTER_VOLUME_DESC"
text = "UI_MASTER_VOLUME"

[node name="MasterSlider" type="HSlider" parent="Master"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_MASTER_VOLUME_DESC"
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "TOOLTIP_MUSIC_VOLUME_DESC"
theme_override_constants/separation = 20
script = ExtResource("2_7fc3t")

[node name="MusicLabel" type="Label" parent="Music"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "TOOLTIP_MUSIC_VOLUME_DESC"
text = "UI_MUSIC_VOLUME"

[node name="MusicSlider" type="HSlider" parent="Music"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_MUSIC_VOLUME_DESC"
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "TOOLTIP_SFX_VOLUME_DESC"
theme_override_constants/separation = 20
script = ExtResource("3_6doi4")

[node name="SfxLabel" type="Label" parent="SFX"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "TOOLTIP_SFX_VOLUME_DESC"
text = "UI_SFX_VOLUME"

[node name="SfxSlider" type="HSlider" parent="SFX"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_SFX_VOLUME_DESC"
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="drag_ended" from="Master/MasterSlider" to="Master" method="_on_master_slider_drag_ended"]
[connection signal="drag_ended" from="Music/MusicSlider" to="Music" method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="SFX/SfxSlider" to="SFX" method="_on_sfx_slider_drag_ended"]
